deploy: eb1bf9e727cfc9a0ed4a8dbeabd4fa681ff31c75

--- a/presentation.html
+++ b/presentation.html
@@ -156,7 +156,8 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );</script></head><
 }</code></pre></div></div></div></section>
 <section id="_проблемы_jenkins"><h2>Проблемы Jenkins</h2><div class="slide-content"><div class="ulist"><ul><li><p>Нет локальной проверки</p></li><li><p>Весь функционал в плагинах, которые system-wide</p></li><li><p>Нужны админские права даже чтобы создать джоб</p></li><li><p>Чудовищный UI/UX</p></li></ul></div></div></section>
 <section id="_планы_мечты"><h2>Планы &amp; мечты</h2><div class="slide-content"><div class="ulist"><ul><li><p>Изоляция от окружения на билд-агенте</p></li><li><p>Билд менее чем за час</p></li><li><p>Создание тест-стендов одной кнопкой</p></li><li><p>Автоматический деплой билда на клиенты</p></li><li><p>Более другой CI-сервис</p></li><li><p>Динамический пул агентов</p></li></ul></div></div></section>
-<section id="_qa"><h2>Q&amp;A</h2></section></div></div><script src="https://cdn.jsdelivr.net/npm/reveal.js@3.9.2/js/reveal.js"></script><script>Array.prototype.slice.call(document.querySelectorAll('.slides section')).forEach(function(slide) {
+<section id="_qa"><h2>Q&amp;A</h2></section>
+<section id="_source"><h2>Source</h2><div class="slide-content"><div class="paragraph"><p><a href="https://github.com/slonopotamus/devops-9000">github.com/slonopotamus/devops-9000</a></p></div></div></section></div></div><script src="https://cdn.jsdelivr.net/npm/reveal.js@3.9.2/js/reveal.js"></script><script>Array.prototype.slice.call(document.querySelectorAll('.slides section')).forEach(function(slide) {
   if (slide.getAttribute('data-background-color')) return;
   // user needs to explicitly say he wants CSS color to override otherwise we might break custom css or theme (#226)
   if (!(slide.classList.contains('canvas') || slide.classList.contains('background'))) return;
